--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ body::-webkit-scrollbar {
   top: 0;
   bottom: 0;
   width: 100%;
+  border-radius: 4px;
   position: absolute;
   opacity: 0;
   z-index: 1;
@@ -174,4 +175,53 @@ body::-webkit-scrollbar {
   font-size: 15px;
   color: #6f9e5a;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+}
+
+.website-card {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  position: relative;
+  border-radius: 4px;
+  margin-bottom: 5px;
+  box-shadow: 0 1px 1px 1px rgba(51, 51, 51, 0.25);
+}
+
+.post-infos {
+  width: 100%;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Futura';
+}
+
+.post-title {
+  font-size: 15px;
+  color: #6f9e5a;
+}
+
+.post-description {
+  font-size: 12px;
+  text-align: justify;
+}
+
+.post-description p {
+  margin: 0;
+}
+
+.post-link {
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  border-radius: 4px;
+  position: absolute;
+  opacity: 0;
+  z-index: 1;
+}
+
+.post-link:hover {
+  opacity: 0.2;
+  background-color: black;
 }
