--- a/src/css/style.css
+++ b/src/css/style.css
@@ -145,17 +145,78 @@ body::-webkit-scrollbar {
 
 .tab-content.active {
   display: flex;
-  flex-flow: wrap;
+  flex-direction: column;
 }
 
 .twitch-card {
   width: 100%;
-  height: 80px;
+  min-height: 120px;
   display: flex;
-  position: relative;
   border-radius: 4px;
   margin-bottom: 5px;
-  background-color: #f0f0f0;
+  background-size: cover;
+  background-position: center;
+  align-items: flex-end;
+  overflow: hidden;
+  position: relative;
+}
+
+.twitch-card a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.twitch-card a:hover {
+  background: rgba(255, 255, 255, 0.24);
+}
+
+.twitch-card-infos {
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  width: 100%;
+  display: flex;
+  height: 50px;
+  color: #fff;
+  font-family: 'OpenSans-bold';
+  font-size: 1rem;
+  padding: 5px 10px;
+}
+
+.twitch-card-infos-title {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-shadow:
+}
+
+.twitch-card-infos-title p {
+  margin: 0;
+}
+
+.twitch-card-infos-title .date {
+  font-size: 0.6rem;
+}
+
+.twitch-card-infos-title .game {
+  font-size: 0.65rem;
+}
+
+.twitch-card-infos-author {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.author-avatar {
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+  border-radius: 50%;
+  margin-right: 5px;
 }
 
 .vod-link {
