--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,13 +4,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
 }
 
 .banner {
   flex: 2;
   width: 100%;
   background-image: url("../assets/banner.png");
+  position: relative;
 }
 
 #fretille {
@@ -20,4 +20,40 @@
   height: 37px;
   width: 37px;
   border-radius: 50%;
+}
+
+.viewer-count {
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  color: #fff;
+  font-weight: bold;
+  padding: 1px 5px;
+  text-align: left;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.viewer-count p {
+  margin: 0;
+}
+
+.viewer-count span {
+  border-radius: 50%;
+  background: #bababa;
+  width: 10px;
+  height: 10px;
+  margin-left: 5px;
+  vertical-align: baseline;
+}
+
+.viewer-count.live {
+  color: #ec1313;
+}
+
+.viewer-count.live span {
+  background: #ec1313;
 }
